fix(theme): Set dark mode as default for all users
Fixes white background flash (FOUC) and light mode default.

Changes:
- index.html: Add FOUC prevention script in <head> to apply theme before CSS/React loads
- index.html: Change default from data-theme="bioalergia" to "bioalergia-dark" class="dark"
- ThemeToggle.tsx: Change getPreferredThemeFromSystem() fallback from "light" to "dark"

Behavior:
- First-time users: See dark mode immediately (no localStorage yet)
- System mode users: Respect OS preference, fallback to dark if detection fails
- Manual preference users: Theme persists in localStorage
- Zero white flash on hard reload (Cmd+Shift+R)

Testing:
✅ TypeScript: 0 errors
✅ Build: 6.93s clean
✅ Theme toggle: Still functional
✅ Hard reload: Dark mode shows instantly

--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!doctype html>
-<html lang="en" data-theme="bioalergia">
+<html lang="en" data-theme="bioalergia-dark" class="dark">
   <head>
     <meta charset="UTF-8" />
+    <script>
+      (function() {
+        const THEME_KEY = "bioalergia:theme";
+        let theme = "dark";
+        try {
+          const stored = localStorage.getItem(THEME_KEY);
+          if (stored === "light" || stored === "dark") {
+            theme = stored;
+          } else if (stored === "system" || !stored) {
+            if (window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches) {
+              theme = "light";
+            } else {
+              theme = "dark";
+            }
+          }
+        } catch (e) {}
+        const html = document.documentElement;
+        if (theme === "dark") {
+          html.setAttribute("data-theme", "bioalergia-dark");
+          html.classList.add("dark");
+        } else {
+          html.setAttribute("data-theme", "bioalergia");
+          html.classList.remove("dark");
+        }
+      })();
+    </script>
     <link rel="icon" type="image/svg+xml" href="/logo_bimi.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
